[gd_scene load_steps=11 format=2]

[ext_resource path="res://Animal/AnimalKinematic.gd" type="Script" id=1]
[ext_resource path="res://states/Machinary.gd" type="Script" id=2]
[ext_resource path="res://Animal/Roaming.gd" type="Script" id=3]
[ext_resource path="res://Animal/Pursuiting.gd" type="Script" id=4]
[ext_resource path="res://Animal/Fleeing.gd" type="Script" id=5]
[ext_resource path="res://Animal/Wait.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 140.0

[sub_resource type="CircleShape2D" id=3]
radius = 349.0

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.5
step = 0.02
tracks/0/type = "bezier"
tracks/0/path = NodePath("DamageRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.619608, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("DamageRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("DamageRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("DamageRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 )
}

[node name="Animal" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 1, 0, 0, 1 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 15

[node name="Circle" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="SM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Roaming" type="Node" parent="SM"]
script = ExtResource( 3 )

[node name="Pursuiting" type="Node" parent="SM"]
script = ExtResource( 4 )

[node name="Fleeing" type="Node" parent="SM"]
script = ExtResource( 5 )

[node name="Wait" type="Node" parent="SM"]
script = ExtResource( 6 )

[node name="PursuitArea" type="Area2D" parent="."]
visible = false

[node name="PursuitCircle" type="CollisionShape2D" parent="PursuitArea"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 4 )

[node name="DamageRect" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 1, 1, 1, 0 )

[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_DetectionArea_area_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_exited" from="PursuitArea" to="." method="_on_PursuitArea_body_exited"]
